Add profile bio - Replace '*' scope with all scopes - Filter scopes if the user has not yet verified their email
